fix: don't overlap title and post summary

--- a/assets/sass/content/_content.scss
+++ b/assets/sass/content/_content.scss
@@ -368,6 +368,8 @@
 			font-size: $font-size * $golden-ratio * 0.9;
 			margin-top: 0.75em;
 			word-wrap: break-word;
+			background: white;
+			box-shadow: 0px 20px 20px 0px rgba(255,255,255,0.75);
 		}
 	}
 
@@ -382,7 +384,7 @@
 		// right: 0;
 		// bottom: 0;
 		p { 
-			padding: 0.75em 1em 1em 1em;
+			padding: 0.75em 1em 1em 1.2em;
 			margin: 0;
 		}
 	}
