--- a/style.css
+++ b/style.css
@@ -2434,6 +2434,8 @@ a:active {
 	font-size: 23.29969rem;
 	margin-top: 0.75em;
 	word-wrap: break-word;
+	background: white;
+	box-shadow: 0px 20px 20px 0px rgba(255, 255, 255, 0.75);
 }
 
 .site-main .template-summary .entry-summary {
@@ -2445,7 +2447,7 @@ a:active {
 }
 
 .site-main .template-summary .entry-summary p {
-	padding: 0.75em 1em 1em 1em;
+	padding: 0.75em 1em 1em 1.2em;
 	margin: 0;
 }
 
